Bug 291197 - %OFROMNAME in template uses incorrect encoding
Summary: %OFROMNAME in template uses incorrect encoding
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 18:34 UTC by Antonio Rojas
Modified: 2012-01-12 19:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2012-01-10 18:34:02 UTC
Version:           4.8 (using Devel) 
OS:                Linux

If you reply to a message using a template that contains %OFROMNAME and the sender name has non-ascii characters it is displayed incorrectly

Reproducible: Always

Steps to Reproduce:
Reply to a message whose sender's name contains non-ascii characters, using a template that contains %OFROMNAME

Actual Results:  
The sender's name displays escape code garbage

Expected Results:  
The sender's name is correctly displayed
Comment 1 Laurent Montel 2012-01-12 19:00:55 UTC
Git commit b326d182a72f1205886a45fa44756bacac37e5e1 by Montel Laurent.
Committed on 12/01/2012 at 20:00.
Pushed by mlaurent into branch 'master'.

Fix Bug 291197 - %OFROMNAME in template uses incorrect encoding

FIXED-IN: 4.8.1

M  +6    -6    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/b326d182a72f1205886a45fa44756bacac37e5e1
Comment 2 Laurent Montel 2012-01-12 19:02:42 UTC
Git commit 30007a92bb31a460aab6058b1aa9cead036c13e1 by Montel Laurent.
Committed on 12/01/2012 at 20:00.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 291197 - %OFROMNAME in template uses incorrect encoding

FIXED-IN: 4.8.1
(cherry picked from commit b326d182a72f1205886a45fa44756bacac37e5e1)

Conflicts:

	templateparser/templateparser.cpp

M  +6    -3    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/30007a92bb31a460aab6058b1aa9cead036c13e1