Fix Bug 291197 - %OFROMNAME in template uses incorrect encoding

FIXED-IN: 4.8.1
BUG: 291197
(cherry picked from commit b326d182a72f1205886a45fa44756bacac37e5e1)

Conflicts:

	templateparser/templateparser.cpp