templateparser/templateparser.cpp
@@ -856,7 +856,8 @@ void TemplateParser::processWithTemplate( const QString &tmpl )
         kDebug() << "Command: OFROMNAME";
         i += strlen( "OFROMNAME" );
         if ( mOrigMsg ) {
-          const QByteArray str = MessageCore::StringUtil::stripEmailAddr( mOrigMsg->from()->as7BitString( false ) );
+          const QString str =
+            MessageCore::StringUtil::stripEmailAddr( mOrigMsg->from()->asUnicodeString() );
           plainBody.append( str );
           const QString body = plainToHtml( str );
           htmlBody.append( body );
@@ -866,7 +867,8 @@ void TemplateParser::processWithTemplate( const QString &tmpl )
         kDebug() << "Command: OFROMFNAME";
         i += strlen( "OFROMFNAME" );
         if ( mOrigMsg ) {
-          const QByteArray str = MessageCore::StringUtil::stripEmailAddr( mOrigMsg->from()->as7BitString( false ) );
+          const QString str =
+            MessageCore::StringUtil::stripEmailAddr( mOrigMsg->from()->asUnicodeString() );
           plainBody.append( getFName( str ) );
           const QString body = plainToHtml( getFName( str ) );
           htmlBody.append( body );
@@ -876,7 +878,8 @@ void TemplateParser::processWithTemplate( const QString &tmpl )
         kDebug() << "Command: OFROMLNAME";
         i += strlen( "OFROMLNAME" );
         if ( mOrigMsg ) {
-          const QByteArray str = MessageCore::StringUtil::stripEmailAddr( mOrigMsg->from()->as7BitString( false ) );
+          const QString str =
+            MessageCore::StringUtil::stripEmailAddr( mOrigMsg->from()->asUnicodeString() );
           plainBody.append( getLName( str ) );
           const QString body = plainToHtml( getLName( str ) );
           htmlBody.append( body );
